manifests/agent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-agent
  labels:
    app: jenkins-agent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins-agent
  template:
    metadata:
      labels:
        app: jenkins-agent
    spec:
      containers:
        - name: jenkins-agent
          image: jenkins/inbound-agent:latest
          volumeMounts:
            - name: jenkins-agent-workdir
              mountPath: /home/jenkins/agent
      volumes:
        - name: jenkins-agent-workdir
          emptyDir: {}
