manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins47
  namespace: jenkins1
  labels:
    app: jenkins47
spec:
  type: ClusterIP
  ports:
    - name: ui
      port: 8090
      protocol: TCP
      targetPort: 8090
    - name: slave
      port: 50010
      protocol: TCP
    - name: http
      port: 6444
      protocol: TCP
      targetPort: 8090
  selector:
    app: jenkins47
