manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins1
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: #domain_name
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jenkins47
            port:
              number: 8080
